WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29657
Columns don't break properly in positioned elements with a fixed height.
https://bugs.webkit.org/show_bug.cgi?id=29657
Summary
Columns don't break properly in positioned elements with a fixed height.
Dave Hyatt
Reported
2009-09-22 15:38:03 PDT
Created
attachment 39953
[details]
Test case showing the problem In the attached test case, you should see multiple columns, and not one single long column.
Attachments
Test case showing the problem
(3.02 KB, text/html)
2009-09-22 15:38 PDT
,
Dave Hyatt
no flags
Details
Make sure to still run the multicol code path whenever column-width is non-auto. I will land the testcase from the bug as a layout test.
(1.32 KB, patch)
2009-09-22 18:15 PDT
,
Dave Hyatt
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2009-09-22 18:15:29 PDT
Created
attachment 39972
[details]
Make sure to still run the multicol code path whenever column-width is non-auto. I will land the testcase from the bug as a layout test.
Dave Hyatt
Comment 2
2009-09-23 09:53:41 PDT
Fixed in
r48679
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug