https://bugs.webkit.org/show_bug.cgi?id=29657 Columns don't break properly in positioned elements with a fixed height.  Make sure that a block is still considered to have columns even when the column count is 1 if the column width is non-auto.

Reviewed by John Sullivan.

Added fast/multicol/positioned-with-constrained-height.html

WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::setDesiredColumnCountAndWidth):

LayoutTests:

* fast/multicol/positioned-with-constrained-height.html: Added.
* platform/mac/fast/multicol/float-multicol-expected.txt:
* platform/mac/fast/multicol/positioned-with-constrained-height-expected.checksum: Added.
* platform/mac/fast/multicol/positioned-with-constrained-height-expected.png: Added.
* platform/mac/fast/multicol/positioned-with-constrained-height-expected.txt: Added.



Canonical link: https://commits.webkit.org/40242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48679 268f45cc-cd09-0410-ab3c-d52691b4dbfc